<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:text="@string/logout"
        android:textSize="15sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnLogout"
        android:layout_below="@+id/deviceLabel_01"
        android:layout_marginTop="28dp"
        android:max="255" />

    <TextView
        android:id="@+id/deviceLabel_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deviceLabel_01"
        android:layout_centerVertical="true"
        android:text="@string/device_02" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/deviceLabel_02"
        android:text="@string/device_02" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceLabel_01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/deviceLabel_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_below="@+id/btnLogout"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="56dp"
        android:text="@string/device_01" />

</RelativeLayout>